# mmm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/actions/run_docker/: entrypoint.sh
.github/workflows/: main.yml
cmake/: add_target_parent.cmake  make_unit.cmake  mmm-config.cmake  mmm-doxygen.cmake  mmm-install.cmake
doc/: Doxyfile  base.html  doxygen-awesome.css  godbolt.js  index.md
include/mmm/: communication.hpp  entity.hpp  mmm.hpp  system.hpp
include/mmm/communication/: gather.hpp  scatter.hpp
include/mmm/detail/: abi.hpp  overload.hpp
include/mmm/entity/: distribuable_sequence.hpp  distributed_sequence.hpp
include/mmm/system/: context.hpp  datatype.hpp  traits.hpp
test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  test.hpp
test/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/unit/entity/: distribuable_sequence.cpp
test/unit/sanity/: mpi.cpp
test/unit/system/: context.cpp  datatype.cpp  types.cpp
